--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.11.0",
+    "formik": "^2.2.9",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "primeicons": "^6.0.1",
