--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.11.0",
     "formik": "^2.2.9",
     "next": "12.3.1",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "primeicons": "^6.0.1",
     "primereact": "^8.6.1",
