--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "primereact": "^8.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-joyride": "^2.5.3",
     "react-toggle-dark-mode": "^1.1.0",
     "recoil": "^0.7.6"
   },
